Fixed pagination not showing
Issue where pagination not showing for comments, users, and avatars
indexes fixed.

--- a/restaurant/app/assets/stylesheets/scaffolds.css.scss
+++ b/restaurant/app/assets/stylesheets/scaffolds.css.scss
@@ -79,3 +79,7 @@ textarea:hover, select:hover, input:hover {
   color: gray;
 }
 
+.indexIdInfo{
+  font-size: 10px;
+}
+
